--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@ html5 <!DOCTYPE html>
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
+
+        <h1> Budget Buddies</h1>
         
         <script src="scripts.js" async defer></script>
     </body>
