--- a/index2.html
+++ b/index2.html
@@ -23,7 +23,7 @@
         <script src="" async defer></script>
     </body>
 
-    <nav>
+    <nav class="banner">
         <a href="index.html">Home</a>
         <a href="index2.html">Transactions</a>
     </nav>
