--- a/index2.html
+++ b/index2.html
@@ -30,6 +30,12 @@
 
     <h1>Budget Buddies</h1>
 
+    <!-- <label>Purchases this week</label>  
+    <div id="Purchases">
+        <!-- <p></p> -->
+    <!-- </div> -->
+
+
     <div class="ListingByCategories">
         <table>
             <tr>
