function purchase updates

--- a/index.html
+++ b/index.html
@@ -62,7 +62,11 @@
     <div class="Progress Bar">
     
     </div>
-  
+    <div id="purchase-list-section">
+        <label>Purchases this week</label>  
+        <div id="purchase-list"></div>
+    </div>
+    
     <script src="script.js" async defer></script>
     </body>
 </html>
