working on purchase function

--- a/index2.html
+++ b/index2.html
@@ -30,10 +30,10 @@
 
     <h1>Budget Buddies</h1>
 
-    <!-- <div id="purchase-list-section">
+   
     <label>Purchases this week</label>  
     <div id="purchase-list"></div>
-</div> -->
+
 
 
     <div class="ListingByCategories">
@@ -81,7 +81,7 @@
 
     </div?>
     
-    <script src="script.js" async defer></script>
+    <script src="script.js" async="false"></script>
 
 
 
