--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
     <![endif]-->
 
     <nav class="banner">
-      <a href="index.html">Home</a>
-      <a href="index2.html">Transactions</a>
+      <a href="index.html" class"nav-links" id="home-page">Home</a>
+      <a href="/h/" class="nav-links" id="transaction-page">Transactions</a>
     </nav>
 
     <h1>Budget Buddies</h1>
 
     <div class="budget">
-      <label>Let's start tracking your budget</label>
+      <label id="track">Let's start tracking your budget:</label>
       <form>
         <input
           class="input"
@@ -95,10 +95,9 @@
     <p id="Purchases"></p> -->
 
     <div class="Progress Bar"></div>
-    <!-- <div id="purchase-list-section">
-        <label>Purchases this week</label>  
-        <div id="purchase-list"></div>
-    </div> -->
+  
+    <label>Purchases this week</label>  
+    <div id="purchase-list"></div>
 
     <script src="script.js" async="false"></script>
   </body>
