--- a/index2.html
+++ b/index2.html
@@ -31,8 +31,8 @@
     <h1>Budget Buddies</h1>
 
    
-    <label>Purchases this week</label>  
-    <div id="purchase-list"></div>
+    <!-- <label>Purchases this week</label>  
+    <div id="purchase-list"></div> -->
 
 
 
