Added table and styling

--- a/index.html
+++ b/index.html
@@ -99,6 +99,20 @@
     <label>Purchases this week</label>  
     <div id="purchase-list"></div>
 
+
+
+
+    <!-- Category Table -->
+    <div id= "category-table">
+      <table id= "display">
+        <tr>
+            <th>Category</th>
+            <th>Total Spent</th>
+        </tr>
+
+      </table>
+    </div>
+
     <script src="script.js" async="false"></script>
   </body>
 </html>
