Added alert window

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <![endif]-->
 
     <nav class="banner">
-      <a href="index.html" class"nav-links" id="home-page">Home</a>
+      <a href="index.html" class="nav-links" id="home-page">Home</a>
       <a href="/h/" class="nav-links" id="transaction-page">Transactions</a>
     </nav>
 
