--- a/index.html
+++ b/index.html
@@ -89,27 +89,24 @@
     <label>My Budget</label>
     <p id="Weekly-Budget"></p>
 
-    <!-- <label>Current Balance</label>  
+    <label>Current Balance</label>
     <p id="Balance"></p>
-    <label>Purchases this week</label>  
+
+    <!-- <label>Purchases this week</label>  
     <p id="Purchases"></p> -->
 
     <div class="Progress Bar"></div>
-  
-    <label>Purchases this week</label>  
+
+    <label>Purchases this week</label>
     <div id="purchase-list"></div>
 
-
-
-
     <!-- Category Table -->
-    <div id= "category-table">
-      <table id= "display">
+    <div id="category-table">
+      <table id="display">
         <tr>
-            <th>Category</th>
-            <th>Total Spent</th>
+          <th>Category</th>
+          <th>Total Spent</th>
         </tr>
-
       </table>
     </div>
 
