--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <![endif]-->
 
     <nav class="banner">
-      <a href="index.html" class"nav-links" id="home-page">Home</a>
+      <a href="index.html" class="nav-links" id="home-page">Home</a>
       <a href="/h/" class="nav-links" id="transaction-page">Transactions</a>
     </nav>
 
@@ -89,15 +89,26 @@
     <label>My Budget</label>
     <p id="Weekly-Budget"></p>
 
-    <!-- <label>Current Balance</label>  
+    <label>Current Balance</label>
     <p id="Balance"></p>
-    <label>Purchases this week</label>  
+
+    <!-- <label>Purchases this week</label>  
     <p id="Purchases"></p> -->
 
     <div class="Progress Bar"></div>
-  
-    <label>Purchases this week</label>  
+
+    <label>Purchases this week</label>
     <div id="purchase-list"></div>
+
+    <!-- Category Table -->
+    <div id="category-table">
+      <table id="display">
+        <tr>
+          <th>Category</th>
+          <th>Total Spent</th>
+        </tr>
+      </table>
+    </div>
 
     <script src="script.js" async="false"></script>
   </body>
