--- a/index.html
+++ b/index.html
@@ -97,18 +97,26 @@
 
     <div class="Progress Bar"></div>
 
-    <label>Purchases this week</label>
-    <div id="purchase-list"></div>
+    <!-- <label>Purchases this week</label>
+    <div id="purchase-list"></div> -->
 
-    <!-- Category Table -->
-    <div id="category-table">
-      <table id="display">
-        <tr>
-          <th>Category</th>
-          <th>Total Spent</th>
-        </tr>
-      </table>
-    </div>
+
+<div id = "Totals">
+  <p>Total Food Purchases </p>
+  <p id="Food"></p>
+  
+  <p> Total Entertainment Purchases</p>
+  <p id="Entertainment"></p>
+
+  <p> Total Bills Paid</p>
+  <p id= "Bills"></p>
+  <p> Total Clothing Purchases </p>
+  <p id = "Clothing"></p>
+
+</div>
+
+
+
 
     <script src="script.js" async="false"></script>
   </body>
