--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <nav class="banner">
       <a href="index.html" class="nav-links" id="home-page">Home</a>
-      <a href="/h/" class="nav-links" id="transaction-page">Transactions</a>
+      <a href="index2.html" class="nav-links" id="transaction-page">Transactions</a>
     </nav>
 
     <h1>Budget Buddies</h1>
@@ -92,8 +92,8 @@
     <label>Current Balance</label>
     <p id="Balance"></p>
 
-    <!-- <label>Purchases this week</label>  
-    <p id="Purchases"></p> -->
+    <!-- <label>Total Spend Amount</label>  
+    <p id="total-spend"></p> -->
 
     <div class="Progress Bar"></div>
 
