added total purchases

--- a/index.html
+++ b/index.html
@@ -112,6 +112,8 @@
   <p id= "Bills"></p>
   <p> Total Clothing Purchases </p>
   <p id = "Clothing"></p>
+  <p> Total Purchases Made </p>
+  <p id = "addTotal"></p>
 
 </div>
 
