changes to css and js

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
       <a href="index2.html" class="nav-links" id="transaction-page">Transactions</a>
     </nav>
 
-    <h1>Budget Buddies</h1>
+    <section id="budget-section">
+    <h1>budget buddy</h1>
 
     <div class="budget">
       <label id="track">Let's start tracking your budget:</label>
@@ -40,8 +41,12 @@
         <button class="submit" , id="budget">Save Budget</button>
       </form>
     </div>
-
+    <label>My Budget</label>
+    <p id="Weekly-Budget"></p>
     <div class="purchase">
+    </section>
+
+
       <label> Enter new Purchases </label>
 
       <form>
@@ -86,8 +91,7 @@
       </form>
     </div>
 
-    <label>My Budget</label>
-    <p id="Weekly-Budget"></p>
+    
 
     <label>Current Balance</label>
     <p id="Balance"></p>
