--- a/index.html
+++ b/index.html
@@ -22,31 +22,33 @@
 
     <nav class="banner">
       <a href="index.html" class="nav-links" id="home-page">Home</a>
-      <a href="index2.html" class="nav-links" id="transaction-page">Transactions</a>
+      <a href="index2.html" class="nav-links" id="transaction-page"
+        >Transactions</a
+      >
     </nav>
 
-    <section id="budget-section">
     <h1>budget buddy</h1>
-
-    <div class="budget">
-      <label id="track">Let's start tracking your budget:</label>
-      <form>
-        <input
-          class="input"
-          ,
-          id="newbudget"
-          type="number"
-          placeholder="Weekly Budget"
-        />
-        <button class="submit" , id="budget">Save Budget</button>
-      </form>
-    </div>
-    <label>My Budget</label>
-    <p id="Weekly-Budget"></p>
-    <div class="purchase">
+    <section id="budget-section">
+      <img src="budget.png" alt="budget-icon" id="budget-icon" />
+      <div class="budget">
+        <label class="budget-label" id="track"
+          >Let's start tracking your budget</label>
+        <form>
+          <input
+            class="input"
+            ,
+            id="newbudget"
+            type="number"
+            placeholder="Weekly Budget"
+          />
+          <button class="submit" , id="budget">Save Budget</button>
+        </form>
+        <label id="budget-label">my budget</label>
+        <p id="Weekly-Budget"></p>
+      </div>
     </section>
 
-
+    <div class="purchase">
       <label> Enter new Purchases </label>
 
       <form>
@@ -91,8 +93,6 @@
       </form>
     </div>
 
-    
-
     <label>Current Balance</label>
     <p id="Balance"></p>
 
@@ -104,25 +104,20 @@
     <!-- <label>Purchases this week</label>
     <div id="purchase-list"></div> -->
 
+    <div id="Totals">
+      <p>Total Food Purchases</p>
+      <p id="Food"></p>
 
-<div id = "Totals">
-  <p>Total Food Purchases </p>
-  <p id="Food"></p>
-  
-  <p> Total Entertainment Purchases</p>
-  <p id="Entertainment"></p>
+      <p>Total Entertainment Purchases</p>
+      <p id="Entertainment"></p>
 
-  <p> Total Bills Paid</p>
-  <p id= "Bills"></p>
-  <p> Total Clothing Purchases </p>
-  <p id = "Clothing"></p>
-  <p> Total Purchases Made </p>
-  <p id = "addTotal"></p>
-
-</div>
-
-
-
+      <p>Total Bills Paid</p>
+      <p id="Bills"></p>
+      <p>Total Clothing Purchases</p>
+      <p id="Clothing"></p>
+      <p>Total Purchases Made</p>
+      <p id="addTotal"></p>
+    </div>
 
     <script src="script.js" async="false"></script>
   </body>
