--- a/index.html
+++ b/index.html
@@ -95,7 +95,11 @@
     <!-- <label>Total Spend Amount</label>  
     <p id="total-spend"></p> -->
 
-    <div class="Progress Bar"></div>
+    <div id="Progress-Bar" value="0"></div>
+
+    <!-- <div id = "Progress_Status"> 
+    <div id= "Progress-Bar"></div>
+    </div> -->
 
     <!-- <label>Purchases this week</label>
     <div id="purchase-list"></div> -->
