--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <nav class="banner">
       <a href="index.html" class="nav-links" id="home-page">Home</a>
-      <a href="index2.html" class="nav-links" id="transaction-page">Transactions</a>
+      <a href="index2.html" class="nav-links" id="transaction-page">Spending</a>
     </nav>
 
     <h1>budget buddy</h1>
@@ -41,9 +41,10 @@
           />
           <button class="submit" , id="budget">save budget</button>
         </form>
-        <label id="budget-label">my budget</label>
-        <p id="Weekly-Budget"></p>
-      </div>
+  
+        <label id="budget-label">my budget
+        <p id="Weekly-Budget"></p></label>
+        </div>
     </section>
 
     <div class="purchase">
@@ -103,25 +104,25 @@
     <div id="Totals">
       <div id="header-cat">
       <img src="transaction.png" alt="transaction icon" id="transaction-icon">
-      <p id="cat-tot">Category totals</p>
+      <p id="cat-tot">Spending by Category</p>
     </div>
       <div id="food-cat">
-      <p>Total Food Purchases</p>
+      <p>Food </p>
       <p id="Food"></p></div>
 <div id="entertain-cat">
-      <p>Total Entertainment Purchases</p>
+      <p>Entertainment</p>
       <p id="Entertainment"></p>
     </div>
     <div id="bills-cat">
-      <p>Total Bills Paid</p>
+      <p>Bills</p>
       <p id="Bills"></p>
     </div>
     <div id="clothes-cat">
-      <p>Total Clothing Purchases</p>
+      <p>Clothing</p>
       <p id="Clothing"></p>
     </div>
     <div id="tot-cat">
-      <p>Total Purchases Made</p>
+      <p>Total Purchases</p>
       <p id="addTotal"></p>
     </div>
     </div>
