unlinked the second html

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <nav class="banner">
       <a href="index.html" class="nav-links" id="home-page">Home</a>
-      <a href="index2.html" class="nav-links" id="transaction-page">Spending</a>
+      <a href="/h/" class="nav-links" id="transaction-page">Spending</a>
     </nav>
 
     <h1>budget buddy</h1>
@@ -84,7 +84,7 @@
           <option selected="">Bills</option>
           <option>Clothing</option>
         </select>
-        <button class="submit" , id="purchase">add purchase</button>
+        <button class="submit" id="purchase" onclick="move()">add purchase</button>
       </form>
     </div>
 
@@ -97,7 +97,7 @@
     <p id="total-spend"></p> -->
 
     <div class="Progress Bar" id="progress-bar"> placeholder for styling purposes </div>
-
+    
     <!-- <label>Purchases this week</label>
     <div id="purchase-list"></div> -->
 
