--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           <option selected="">Bills</option>
           <option>Clothing</option>
         </select>
-        <button class="submit" id="purchase" onclick="move()">add purchase</button>
+        <button class="submit" id="purchase">add purchase</button>
       </form>
     </div>
 
